native/ailia.h


#define AILIA_STATUS_SUCCESS (0)
#define AILIA_STATUS_INVALID_STATE (-7)
#define AILIA_STATUS_DATA_HIDDEN (-19)
struct AILIANetwork;
int AILIA_API ailiaCreate(struct AILIANetwork** net, int env_id, int num_thread);
void AILIA_API ailiaDestroy(struct AILIANetwork* net);
int AILIA_API ailiaGetBlobCount(struct AILIANetwork* net, unsigned int* blob_count);
int AILIA_API ailiaGetBlobData(struct AILIANetwork* net, void* dest, unsigned int dest_size, unsigned int blob_idx);
int AILIA_API ailiaGetOutputBlobCount(struct AILIANetwork* net, unsigned int* output_blob_count);
int AILIA_API ailiaGetBlobIndexByOutputIndex(struct AILIANetwork* net, unsigned int* blob_idx, unsigned int output_blob_idx);
int AILIA_API ailiaFinalize(void);
#define AILIA_ENVIRONMENT_VERSION (2)
typedef struct _AILIAEnvironment {
	int id;
	int type;
	const char* name;
	int backend;
	int props;
} AILIAEnvironment;
int AILIA_API ailiaSetTemporaryCachePathA(const char* cache_dir);
int AILIA_API ailiaSetTemporaryCachePathW(const wchar_t* cache_dir);
int AILIA_API ailiaGetEnvironmentCount(unsigned int* env_count);
int AILIA_API ailiaGetEnvironment(AILIAEnvironment** env, unsigned int env_idx, unsigned int version);
int AILIA_API ailiaGetSelectedEnvironment(struct AILIANetwork* net, AILIAEnvironment** env, unsigned int version);
#define AILIA_MEMORY_NO_OPTIMIZATION (0)
#define AILIA_MEMORY_REDUCE_CONSTANT (1)
int AILIA_API ailiaSetMemoryMode(struct AILIANetwork* net, unsigned int mode);
int AILIA_API ailiaDisableLayerFusion(struct AILIANetwork* net);