lib/ffi/ailia.dart


  late final _ailiaGetOutputBlobCountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Uint32>)>>('ailiaGetOutputBlobCount');
  late final _ailiaGetOutputBlobCount = _ailiaGetOutputBlobCountPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>)>();

  /// \~japanese
  /// @brief 出力データ(Blob)のインデックスを取得します
  /// @param net ネットワークオブジェクトポインタ
  /// @param blob_idx blobのインデックス(0～ ailiaGetBlobCount() -1)
  /// @param output_blob_idx 出力blob内でのインデックス(0～ ailiaGetOutputBlobCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Get the blob index of the input data blob.
  /// @param net A network instance pointer
  /// @param blob_idx blob index (between 0 and  ailiaGetBlobCount() -1)
  /// @param output_blob_idx index among output blobs (between 0 and  ailiaGetOutputBlobCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenStreamXXX().
  int ailiaGetBlobIndexByOutputIndex(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> blob_idx,
    int output_blob_idx,
  ) {
    return _ailiaGetBlobIndexByOutputIndex(
      net,
      blob_idx,
      output_blob_idx,
    );
  }

  late final _ailiaGetBlobIndexByOutputIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaGetBlobIndexByOutputIndex');
  late final _ailiaGetBlobIndexByOutputIndex =
      _ailiaGetBlobIndexByOutputIndexPtr.asFunction<
          int Function(
              ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief ailiaがグローバルに確保したGPUリソース等を解放します
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返します。
  /// @details
  /// ailiaCreate() で作成したインスタンス全てを ailiaDestroy() で解放した状態で呼び出す必要があります。
  /// それ以外の状態で呼び出された場合 #ref AILIA_STATUS_INVALID_STATE を返します。
  /// Windows 環境の場合、DllMain 等からこの API を呼び出すとデッドロックする可能性があります。
  ///
  /// \~english
  /// @brief Release GPU and other resources that have been globally allocated with ailia.
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// It must be called with all ailia instances created by ailiaCreate() released by ailiaDestroy().
  /// Otherwise, #ref AILIA_STATUS_INVALID_STATE will be returned.
  /// Call this API from DllMain() on Windows OS, there is possibility of a deadlock.
  int ailiaFinalize() {
    return _ailiaFinalize();
  }

  late final _ailiaFinalizePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('ailiaFinalize');
  late final _ailiaFinalize = _ailiaFinalizePtr.asFunction<int Function()>();

  /// \~japanese
  /// @brief 一時キャッシュディレクトリを指定します
  /// @param cache_dir 一時キャッシュディレクトリ
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// 指定したキャッシュディレクトリは推論実行環境毎に最適化したマシンコードを生成して保存するためにシステムが利用します。
  /// ailia の実行開始時に一度だけ呼び出してください。二回目以降の呼び出しに対しては無視して成功を返します。
  /// 複数スレッドから呼び出された場合も内部で排他制御しているので特に問題は発生しません。
  /// Vulkan のシェーダーキャッシュ機能など、この API を呼ぶまで利用できないものがあります。
  /// cache_dirにはContext.getCacheDir()で取得したファイルパスを指定してください。
  ///
  /// \~english
  /// @brief Specifies a temporary cache directory.
  /// @param cache_dir Temporary cache directory
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This system uses the specified cache directory to generate and store machine code optimized for each inference
  /// backend. Call only once at the start of execution of ailia. It ignores any second and subsequent calls, and
  /// automatically returns success. There is no particular problem if it is called from multiple threads, as it provides
  /// exclusive control internally. Some functions, such as Vulkan shader cache, cannot be used until this API function is
  /// called. Specify the file path obtained by Context.getCacheDir() for cache_dir.
  int ailiaSetTemporaryCachePathA(
    ffi.Pointer<ffi.Int8> cache_dir,
  ) {
    return _ailiaSetTemporaryCachePathA(
      cache_dir,
    );
  }

  late final _ailiaSetTemporaryCachePathAPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Int8>)>>(
          'ailiaSetTemporaryCachePathA');
  late final _ailiaSetTemporaryCachePathA = _ailiaSetTemporaryCachePathAPtr
      .asFunction<int Function(ffi.Pointer<ffi.Int8>)>();

  int ailiaSetTemporaryCachePathW(
    ffi.Pointer<wchar_t> cache_dir,
  ) {
    return _ailiaSetTemporaryCachePathW(
      cache_dir,
    );
  }

  late final _ailiaSetTemporaryCachePathWPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<wchar_t>)>>(
          'ailiaSetTemporaryCachePathW');
  late final _ailiaSetTemporaryCachePathW = _ailiaSetTemporaryCachePathWPtr
      .asFunction<int Function(ffi.Pointer<wchar_t>)>();

  /// \~japanese
  /// @brief 利用可能な計算環境(CPU, GPU)の数を取得します
  /// @param env_count 計算環境情報の数の格納先
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the number of available computational environments (CPU, GPU).
  /// @param env_count The storage location of the number of computational environment information
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  int ailiaGetEnvironmentCount(
    ffi.Pointer<ffi.Uint32> env_count,
  ) {
    return _ailiaGetEnvironmentCount(
      env_count,
    );
  }

  late final _ailiaGetEnvironmentCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Uint32>)>>(
          'ailiaGetEnvironmentCount');
  late final _ailiaGetEnvironmentCount = _ailiaGetEnvironmentCountPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint32>)>();

  /// \~japanese
  /// @brief 計算環境の一覧を取得します
  /// @param env 計算環境情報の格納先(AILIANetworkインスタンスを破棄するまで有効)
  /// @param env_idx 計算環境情報のインデックス(0～ ailiaGetEnvironmentCount() -1)
  /// @param version AILIA_ENVIRONMENT_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the list of computational environments.
  /// @param env The storage location of the computational environment information (valid until the AILIANetwork instance
  /// is destroyed)
  /// @param env_idx The index of the computational environment information (0 to  ailiaGetEnvironmentCount() -1)
  /// @param version AILIA_ENVIRONMENT_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  int ailiaGetEnvironment(
    ffi.Pointer<ffi.Pointer<AILIAEnvironment>> env,
    int env_idx,
    int version,
  ) {
    return _ailiaGetEnvironment(
      env,
      env_idx,
      version,
    );
  }

  late final _ailiaGetEnvironmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Pointer<AILIAEnvironment>>,
              ffi.Uint32, ffi.Uint32)>>('ailiaGetEnvironment');
  late final _ailiaGetEnvironment = _ailiaGetEnvironmentPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<AILIAEnvironment>>, int, int)>();

  /// \~japanese
  /// @brief 選択された計算環境を取得します
  /// @param net ネットワークオブジェクトポインタ
  /// @param env 計算環境情報の格納先(AILIANetworkインスタンスを破棄するまで有効)
  /// @param version AILIA_ENVIRONMENT_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the selected computational environment.
  /// @param net A network instance pointer
  /// @param env The storage location of the computational environment information (valid until the AILIANetwork instance
  /// is destroyed)
  /// @param version AILIA_ENVIRONMENT_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  int ailiaGetSelectedEnvironment(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Pointer<AILIAEnvironment>> env,
    int version,
  ) {
    return _ailiaGetSelectedEnvironment(
      net,
      env,
      version,
    );
  }

  late final _ailiaGetSelectedEnvironmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Pointer<AILIAEnvironment>>,
              ffi.Uint32)>>('ailiaGetSelectedEnvironment');
  late final _ailiaGetSelectedEnvironment =
      _ailiaGetSelectedEnvironmentPtr.asFunction<
          int Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Pointer<AILIAEnvironment>>, int)>();

  /// \~japanese
  /// @brief 推論時のメモリの使用方針を設定します
  /// @param net ネットワークオブジェクトポインタ
  /// @param mode メモリモード(論理和で複数指定可) AILIA_MEMORY_XXX (デフォルト: \ref AILIA_MEMORY_REDUCE_CONSTANT )
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// メモリの使用方針を変更します。 \ref AILIA_MEMORY_NO_OPTIMIZATION 以外を指定した場合は、
  /// 推論時に確保する中間バッファーを開放するため、推論時のメモリ使用量を削減することができます。
  /// ailiaCreate() の直後に指定する必要があります。ailiaOpenを呼び出した後は変更することができません。
  /// なお、中間バッファーを開放するように指定した場合、該当するBlobに対し、 ailiaGetBlobData() を呼び出すと
  /// \ref AILIA_STATUS_DATA_HIDDEN エラーが返ります。
  ///
  /// \~english
  /// @brief Set the memory usage policy for inference
  /// @param net A network instance pointer
  /// @param mode Memory mode (Multiple specifications possible with logical sum) AILIA_MEMORY_XXX (Default : \ref
  /// AILIA_MEMORY_REDUCE_CONSTANT )
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Change the memory usage policy.
  /// If a value other than  \ref AILIA_MEMORY_NO_OPTIMIZATION  is specified,
  /// the intermediate buffer secured during inference will be released, so the memory usage during inference can be
  /// reduced. Must be specified immediately after  ailiaCreate() . It cannot be changed after calling ailiaOpen. If you
  /// specify to release the intermediate buffer, calling  ailiaGetBlobData()  for the corresponding blob will return an
  /// \ref AILIA_STATUS_DATA_HIDDEN  error.
  int ailiaSetMemoryMode(
    ffi.Pointer<AILIANetwork> net,
    int mode,
  ) {
    return _ailiaSetMemoryMode(
      net,
      mode,
    );
  }

  late final _ailiaSetMemoryModePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<AILIANetwork>, ffi.Uint32)>>('ailiaSetMemoryMode');
  late final _ailiaSetMemoryMode = _ailiaSetMemoryModePtr
      .asFunction<int Function(ffi.Pointer<AILIANetwork>, int)>();

  /// \~japanese
  /// @brief 推論時のレイヤー統合を無効化します
  /// @param net ネットワークオブジェクトポインタ
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// レイヤー統合により取得できなくなるBlobを取得する必要がある場合などに用います。
  /// ailiaCreate() の直後に指定する必要があります。ailiaOpenを呼び出した後は変更することができません。
  /// なお、レイヤー統合を無効化すると推論速度が低下する場合があります。
  ///
  /// \~english
  /// @brief Disalbe layer fusion optimaization for inference
  /// @param net A network instance pointer
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This api use to get blob that remove by layer fusion optimization.
  /// Must be specified immediately after  ailiaCreate() . It cannot be changed after calling ailiaOpen.
  /// Note: When disable layer fusion optimization, inference speed may be down.
  int ailiaDisableLayerFusion(
    ffi.Pointer<AILIANetwork> net,
  ) {
    return _ailiaDisableLayerFusion(
      net,
    );
  }
